--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@700&display=swap');
 
 body {
+  background: #F8F9FA;
   margin: 0;
 }
