--- a/app/one_presentation/components/Styles/SecondTable.module.css
+++ b/app/one_presentation/components/Styles/SecondTable.module.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-wrap: wrap-reverse;
     font-family: 'Nunito', sans-serif;
+    color:rgb(177, 174, 174);
 }
 
 .textSubBox {
@@ -12,6 +13,7 @@
     display: grid;
     place-content: center;
     text-align: center;
+    color:rgb(177, 174, 174);
 }
 
 .imgSubBox {
